k8s-prod/40-order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: goodfood
spec:
  selector: { app: order-service }
  ports: [{ name: http, port: 8082, targetPort: 8082 }]
